# 2025-final-individual-ITSDENISSKA

solution/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  readme.md
solution/alembic/: env.py
solution/alembic/versions/: 2025_02_12_1702-45bc604146ae_init_database_add_clients_table.py  2025_02_12_1736-f6049490c2c3_add_advertisers_table.py  2025_02_12_1831-2b012f8bcfbf_add_campaigns_and_targetings_tables.py  2025_02_13_0043-101688d708a6_add_ml_scores_table.py  2025_02_13_1211-695ff2140d3b_add_click_and_impressions_tables.py  2025_02_13_1218-c269f7b9f407_update_clicks_table.py  2025_02_13_1824-ba5252e39b85_update_unique_clicks_and_unique_.py  2025_02_13_1919-77d5353216a0_update_unique_clicks_table.py  2025_02_13_1957-a3cf46ab1c70_update_tables_models.py  2025_02_14_1537-a55efe22153e_add_nullable_targeting_params.py  2025_02_14_1617-b17409dfbf29_add_cost_field_to_uniques_tables.py  2025_02_15_1805-88fc5e0b7ac1_add_files_to_campaigns.py  2025_02_22_0224-537c9e0a1795_add_is_deleted_column.py
solution/grafana/dashboards/: statistic_dashboard.json
solution/grafana/provisioning/datasources/: postgres.yml
solution/src/: main.py
solution/src/api_v1/ads/: crud.py  routes.py  schemas.py
solution/src/api_v1/advertisers/: crud.py  routes.py  schemas.py
solution/src/api_v1/campaigns/: crud.py  routes.py  schemas.py
solution/src/api_v1/clients/: crud.py  routes.py  schemas.py
solution/tests/e2e/: test_end_to_end_full.py
solution/tests/unit/: test_ads.py  test_advertisers.py  test_campaigns.py  test_clients.py  test_ml_scores.py  test_stats.py
(+30 files in other folders)
