[tool.poetry]
name = "prod-solution"
version = "0.1.0"
description = "project for prod individual round"
authors = ["ITSDENISSKA <fotiev.d1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
black = "^24.10.0"
alembic = "^1.13.3"
pydantic-settings = "^2.6.0"
fastapi = "^0.115.4"
pydantic = "^2.9.2"
pyjwt = "^2.9.0"
uvicorn = "^0.32.0"
itsdangerous = "^2.2.0"
psycopg = {extras = ["binary"], version = "^3.2.3"}
greenlet = "^3.1.1"
pytest = "^8.3.4"
httpx = "0.27.2"
pytest-asyncio = "^0.25.3"
boto3 = "^1.36.21"
python-multipart = "^0.0.20"
yandex-cloud-ml-sdk = "^0.3.1"

[tool.pytest.ini_options]
addopts = "--asyncio-mode=auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
